--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -67,3 +67,25 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+/* Solution */
+
+.modal {
+  display: flex;
+  gap: 1rem;
+  padding: 1rem;
+}
+.icon {
+  flex-shrink: 0;
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+.text {
+  margin-bottom: 0.5rem;
+}
