--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 img {
@@ -23,4 +23,21 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+/* Solution */
+body {
+  text-align: center;
+}
+.title {
+  margin-bottom: 32px;
+}
+.items {
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+  text-wrap: wrap;
+}
+.info {
+  max-width: 200px;
 }
